--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -4,6 +4,11 @@
 body {
   font-family: "Roboto", "Noto Sans KR", sans-serif;
   font-size: 16px;
+  // background-color: rgba(0, 0, 0, 0.6);
+  background-image: url("../images/ev-header2-rotate.jpg");
+  background-size: contain;
+  background-position-x: -90%;
+  background-position-y: -360%;
 }
 
 a {
@@ -11,22 +16,81 @@ a {
   text-decoration: none;
 }
 
-#main {
+#header {
+  display: flex;
   position: relative;
-  width: 100%;
-  height: 100%;
-  .option_box {
-    display: flex;
-    justify-content: center;
-    margin: 50px 0;
-    font-size: 20px;
-    p {
-      padding: 20px;
-    }
+  height: 50px;
+  padding: 35px 0;
+  justify-content: flex-start;
+  padding-left: 50px;
+  background-color: #000;
+  // background-image: url("../images/ev-header2.jpg");
+  // background-position-y: 28%;
+  // background-size: cover;
+  &:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+  h2 {
+    font-size: 30px;
+    font-weight: 700;
+    color: #fff;
+    line-height: 1.5;
+    z-index: 99;
   }
 }
 
-#map {
+#main {
   display: flex;
-  justify-content: center;
+
+  position: relative;
+  width: 100%;
+  height: 100%;
+  .optionContainer {
+    position: relative;
+    height: calc(100vh - 120px);
+    top: 0;
+    left: 0;
+    z-index: 99;
+    display: flex;
+    flex-basis: 20%;
+    justify-content: center;
+    align-items: center;
+    .optionBox {
+      justify-content: center;
+      border: 1px solid #000;
+      height: calc(100vh - 160px);
+      border-radius: 10px;
+      background-color: rgba(0, 0, 0, 0.8);
+      margin: 10px;
+      width: 100%;
+      font-size: 20px;
+      position: relative;
+      p {
+        padding: 20px;
+        color: #fff;
+      }
+    }
+  }
+  .mapContainer {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 80%;
+
+    width: 100%;
+    flex-grow: 1;
+    .map {
+      position: relative;
+      border: 1px solid rgba(0, 0, 0, 0.3);
+      border-radius: 10px;
+    }
+  }
 }
